--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
+  "name": "animu",
+  "version": "0.0.1",
+  "description": "Animu",
+  "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "node -r dotenv/config dist/index.js",
-    "serve": "nodemon"
+    "serve": "nodemon",
+    "deploy-commands": "tsc && node -r dotenv/config dist/scripts/deploy-commands.js"
   },
+  "exports": "./dist/index.js",
   "dependencies": {
+    "@discordjs/builders": "^0.6.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^0.21.1",
+    "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
     "dotenv": "^9.0.0",
     "lodash": "^4.17.21",
@@ -14,6 +23,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.168",
     "@types/node": "^15.0.2",
+    "@types/node-fetch": "^3.0.3",
     "@types/ws": "^7.4.2",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
@@ -24,5 +34,8 @@
   },
   "_moduleAliases": {
     "@keys": "dist/keys/index"
-  }
+  },
+  "repository": "https://github.com/LightYagami200/Animu.git",
+  "author": "Light Yagami <its_lightyagami@icloud.com>",
+  "license": "MIT"
 }
