--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
+    "target": "es6",
+    "module": "CommonJS",
     "outDir": "./dist/",
     "rootDir": "./src/",
-    "resolveJsonModule": true,
     "downlevelIteration": true,
     "strict": true,
-    "typeRoots": ["./node_modules/@types"],
     "esModuleInterop": true,
+    "typeRoots": ["@types", "./node_modules/@types"],
     "forceConsistentCasingInFileNames": true,
     "types": ["node"],
     "baseUrl": "src",
