--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.168",
+    "@types/lodash": "^4.14.175",
     "@types/node": "^15.0.2",
     "@types/node-fetch": "^3.0.3",
     "@types/ws": "^7.4.2",
@@ -33,7 +33,9 @@
     "typescript": "^4.2.4"
   },
   "_moduleAliases": {
-    "@keys": "dist/keys/index"
+    "@keys": "dist/keys/index",
+    "@assets": "dist/assets",
+    "@utils": "dist/utils"
   },
   "repository": "https://github.com/LightYagami200/Animu.git",
   "author": "Light Yagami <its_lightyagami@icloud.com>",
