--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "paths": {
       "@keys": ["keys/index"],
       "@assets/*": ["assets/*"],
+      "@models/*": ["models/*"],
       "@utils/*": ["utils/*"]
     },
     "noImplicitAny": true,
