--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node -r dotenv/config dist/index.js",
+    "start": "node dist/index.js",
     "serve": "nodemon",
-    "deploy-commands": "tsc && node -r dotenv/config dist/scripts/deploy-commands.js"
+    "deploy-commands": "tsc && node dist/scripts/deploy-commands.js"
   },
   "exports": "./dist/index.js",
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "axios": "^0.21.2",
-    "discord-api-types": "^0.23.1",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "axios": "^0.26.0",
+    "discord-api-types": "^0.27.2",
     "discord.js": "^13.1.0",
-    "dotenv": "^9.0.0",
+    "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
-    "@types/node": "^15.0.2",
+    "@types/node": "^17.0.19",
     "@types/node-fetch": "^3.0.3",
-    "@types/ws": "^7.4.2",
-    "@typescript-eslint/parser": "^4.22.1",
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "@types/ws": "^8.2.3",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "typescript": "^4.2.4"
