--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "axios": "^0.26.0",
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.1.0",
-    "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.12"
@@ -37,7 +36,7 @@
     "@keys": "dist/keys/index",
     "@assets": "dist/assets",
     "@models": "dist/models",
-    "@utils": "dist/utils"
+    "@utils": "dist/utils/index"
   },
   "engines": {
     "node": "16.x"
