--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "exports": "./dist/index.js",
   "dependencies": {
+    "@dice-roller/rpg-dice-roller": "^5.1.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
     "axios": "^0.26.0",
