--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@dice-roller/rpg-dice-roller": "^5.1.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@top-gg/sdk": "^3.1.3",
     "axios": "^0.26.0",
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.1.0",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "topgg-autoposter": "^2.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
