--- a/package.json
+++ b/package.json
@@ -16,14 +16,23 @@
     "@discordjs/rest": "^0.3.0",
     "@top-gg/sdk": "^3.1.3",
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.1.0",
+    "express": "^4.17.3",
+    "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.12",
     "topgg-autoposter": "^2.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.19",
     "@types/node-fetch": "^3.0.3",
@@ -39,7 +48,10 @@
     "@keys": "dist/keys/index",
     "@assets": "dist/assets",
     "@models": "dist/models",
-    "@utils": "dist/utils/index"
+    "@utils": "dist/utils/index",
+    "@routes/utils": "dist/routes/utils/index",
+    "@routes/middlewares": "dist/routes/middlewares/index",
+    "@routes/v1": "dist/routes/api/v1"
   },
   "engines": {
     "node": "16.x"
