--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dice-roller/rpg-dice-roller": "^5.1.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@solana/web3.js": "^1.36.0",
     "@top-gg/sdk": "^3.1.3",
     "axios": "^0.26.0",
     "cors": "^2.8.5",
@@ -26,7 +27,8 @@
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^6.0.12",
-    "topgg-autoposter": "^2.0.1"
+    "topgg-autoposter": "^2.0.1",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
