--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@dice-roller/rpg-dice-roller": "^5.1.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@nfteyez/sol-rayz": "^0.10.2",
     "@solana/web3.js": "^1.36.0",
     "@top-gg/sdk": "^3.1.3",
+    "@types/ioredis": "^4.28.8",
     "axios": "^0.26.0",
     "cors": "^2.8.5",
     "discord-api-types": "^0.27.2",
@@ -23,6 +25,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
+    "ioredis": "^4.28.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
