--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@top-gg/sdk": "^3.1.3",
     "@types/ioredis": "^4.28.8",
     "axios": "^0.26.0",
+    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.1.0",
