--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@dice-roller/rpg-dice-roller": "^5.1.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@gemworks/gem-farm-ts": "^0.22.8",
+    "@metaplex/js": "^4.12.0",
     "@nfteyez/sol-rayz": "^0.10.2",
     "@solana/web3.js": "^1.36.0",
     "@top-gg/sdk": "^3.1.3",
