--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@solana/web3.js": "^1.36.0",
     "@top-gg/sdk": "^3.1.3",
     "@types/ioredis": "^4.28.8",
+    "aws-sdk": "^2.1116.0",
     "axios": "^0.26.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
