--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "exports": "./dist/index.js",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.88.0",
+    "@aws-sdk/s3-request-presigner": "^3.88.0",
     "@dice-roller/rpg-dice-roller": "^5.1.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
@@ -20,7 +22,6 @@
     "@solana/web3.js": "^1.36.0",
     "@top-gg/sdk": "^3.1.3",
     "@types/ioredis": "^4.28.8",
-    "aws-sdk": "^2.1116.0",
     "axios": "^0.26.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
